ready for 3rd update

--- a/src/pages/wallet/wallet.scss
+++ b/src/pages/wallet/wallet.scss
@@ -111,4 +111,12 @@ page-wallet {
  
     color: #4d5853;
 } 
+.item-ios ion-avatar ion-img, .item-ios ion-avatar img {
+    border-radius: 0%;
+  
+}
+.item-md ion-avatar ion-img, .item-md ion-avatar img {
+    border-radius: 0%;
+   
+}
 }
